[package]
name = "ethereum-nabla"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_nabla"
crate-type = ["cdylib"]

[dependencies]
ethabi.workspace = true
prost.workspace = true
prost-types.workspace = true
substreams.workspace = true
substreams-ethereum.workspace = true
tycho-substreams.workspace = true
anyhow = "1.0.75"
num-bigint = "0.4.4"
tempfile = "3.15.0"

[build-dependencies]
substreams-ethereum.workspace = true
prost-build = "0.13.4"
